# Seach_and_built_vector_db

./: README.md  cleaned_notebook.ipynb  demo_script.py  down_pdf.sh  pyproject.toml
